crates/nidus/tests/ui/controller_missing_path.stderr
error: #[controller] requires a string literal path like #[controller("/users")]: unexpected end of input, expected string literal
 --> tests/ui/controller_missing_path.rs:3:1
  |
3 | #[controller]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `controller` (in Nightly builds, run with -Z macro-backtrace for more info)
